--- a/modules/user/public/views/pages/users/new.liquid
+++ b/modules/user/public/views/pages/users/new.liquid
@@ -1,9 +1,7 @@
 {% liquid
   function current_profile = 'modules/user/helpers/current_profile'
   
-  if current_profile.user != null
-    include 'modules/core/helpers/redirect_to'
-  endif
+  include 'modules/user/helpers/can_do_or_redirect', requester: current_profile, do: 'users.register', redirect_url: "/"
 
   function registration_fields = 'modules/user/queries/registration_fields/load'
   assign values = null | hash_merge: email: context.params.email
