--- a/modules/user/public/lib/helpers/current_profile.liquid
+++ b/modules/user/public/lib/helpers/current_profile.liquid
@@ -5,7 +5,11 @@
   else
     function current_profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
     assign current_profile = current_profile | hash_merge: user: user
-    hash_assign current_profile['roles'] = current_profile.roles | array_add: 'authenticated'
+    if current_profile.roles != null
+      hash_assign current_profile['roles'] = current_profile.roles | array_add: 'authenticated'
+    else
+      hash_assign current_profile['roles'] = '["authenticated"]' | parse_json
+    endif
   endif
 
   export current_profile
