--- a/modules/user/public/views/pages/passwords/new.liquid
+++ b/modules/user/public/views/pages/passwords/new.liquid
@@ -11,5 +11,5 @@
     endif
   endif
 
-  theme_render_rc 'passwords/new', context: context
+  render 'modules/user/passwords/new', context: context
 %}
