Migrate profile module (#64)
* Migrate profile module to user

* Profile module path changed to user

* Modified user to include profile module

* Profile from

* Remove logs

* Merge profile into user module

* Fixed tests

* Fixed tests

* Fix playwright tests

* Fix heading in registration tests

* add more realistic user data

* update data.zip

* delete unused user from admin auth

* update migration | update profile instead of user to set superadmin role

* update data.zip

* format document

* add profile tests

* Update permissions for members

* add new user to .auth

* add data attributes

* fix tests

* Cleanup

* User changes

* Bug fix

* Cleanup

* Fix tests

* Fix auth bug

* Readme updated

* Readme

* Profile fix

* Cleanup

* theme_rc replaced with render, migrations.md

* Migrations doc

* Migrations.md file

* Cleanup

* Migrations

* Add roles to user search query

* Cleanup theme_render_rc

---------

Co-authored-by: damcik <suchuschy@gmail.com>

--- a/app/lib/test/commands/user/roles/append_test.liquid
+++ b/app/lib/test/commands/user/roles/append_test.liquid
@@ -1,9 +1,9 @@
 {% liquid
   # seed DB with a user
   assign email = 10 | random_string | append: '-user-append@example.com'
-  function user = 'modules/user/commands/user/create', email: email , password: email, hook_params: null, roles: roles
-
-  function result = 'modules/user/commands/user/roles/append', id: user.id, role: "custom-role"
+  function user = 'modules/user/commands/user/create', first_name: 'test', last_name: 'test', email: email, password: email, hook_params: null, roles: null
+  function profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
+  function result = 'modules/user/commands/profiles/roles/append', id: profile.id, role: "custom-role"
   assign roles = 'member,custom-role' | split: ','
   function contract = 'modules/tests/assertions/equal', contract: contract, given: result.roles expected: roles, field_name: null
 %}
