--- a/app/lib/test/commands/user/roles/remove_test.liquid
+++ b/app/lib/test/commands/user/roles/remove_test.liquid
@@ -2,8 +2,9 @@
   # test remove role
 
   assign email = 10 | random_string | append: '-user-create@example.com'
-  function user = 'modules/user/commands/user/create', email: email , password: email, hook_params: null, roles: 'role 1,role 2,role 3'
-  function result = 'modules/user/commands/user/roles/remove', id: user.id, role: 'role 2'
+  function user = 'modules/user/commands/user/create', first_name: 'test', last_name: 'test', email: email , password: email, hook_params: null, roles: 'role 1,role 2,role 3'
+  function profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
+  function result = 'modules/user/commands/profiles/roles/remove', id: profile.id, role: 'role 2'
 
   assign roles = 'role 1,role 3' | split: ','
   function contract = 'modules/tests/assertions/equal', contract: contract, given: result.roles, expected: roles, field_name: null
