--- a/modules/user/public/lib/events/user_role_appended.liquid
+++ b/modules/user/public/lib/events/user_role_appended.liquid
@@ -1,13 +1,13 @@
 ---
 metadata:
   event:
-    user_id
+    profile_id
     role
 ---
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
-  function c = 'modules/core/validations/presence', c: c, object: event, field_name: 'user_id'
+  function c = 'modules/core/validations/presence', c: c, object: event, field_name: 'profile_id'
   function c = 'modules/core/validations/presence', c: c, object: event, field_name: 'role'
 
   return c
