--- a/modules/user/public/lib/queries/role_permissions/permissions.liquid
+++ b/modules/user/public/lib/queries/role_permissions/permissions.liquid
@@ -4,7 +4,10 @@
   "{{ context.constants.USER_DEFAULT_ROLE }}": [],
   {% endif %}
   "anonymous": ["sessions.create", "users.register"],
-  "authenticated": ["sessions.destroy","oauth.manage"]
+  "authenticated": ["sessions.destroy","oauth.manage"],
+  "admin": ["admin_pages.view", "admin.users.manage", "users.impersonate"],
+  "member": ["profile.manage"],
+  "superadmin": ["users.impersonate_superadmin"]
 }
 {% endparse_json %}
 
