--- a/modules/user/public/views/pages/users/create.liquid
+++ b/modules/user/public/views/pages/users/create.liquid
@@ -3,13 +3,11 @@ method: post
 slug: users
 ---
 {% liquid
-  function current_user = 'modules/user/queries/user/current'
+  function current_profile = 'modules/user/helpers/current_profile'
+  
+  include 'modules/user/helpers/can_do_or_redirect', requester: current_profile, do: 'users.register', redirect_url: "/"
 
-  # platformos-check-disable UnreachableCode
-  include 'modules/user/helpers/can_do_or_redirect', requester: current_user, do: 'users.register', redirect_url: "/"
-  # platformos-check-enable UnreachableCode
-
-  function object = 'modules/user/commands/user/create', email: params.email, password: params.password, hook_params: params, roles: null
+  function object = 'modules/user/commands/user/create', first_name: params.first_name, last_name: params.last_name, email: params.email, password: params.password, hook_params: params
   if object.valid
     function _ = 'modules/user/commands/session/create', user_id: object.id, validate_password: false, email: null, password: null, hook_params: null
     include 'modules/core/helpers/redirect_to'
@@ -19,6 +17,6 @@ slug: users
     function registration_fields = 'modules/user/queries/registration_fields/load'
 
     assign values = params | hash_merge: password: ''
-    theme_render_rc 'users/new', context: context, registration_fields: registration_fields, errors: object.errors, values: values
+    render 'modules/user/users/new', context: context, registration_fields: registration_fields, errors: object.errors, values: values
   endif
 %}
